[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Login/loginScript.gd" type="Script" id=1]
[ext_resource path="res://common_assets/Fonts/Login details.tres" type="DynamicFont" id=2]
[ext_resource path="res://common_assets/Login/translucent.tres" type="StyleBox" id=3]
[ext_resource path="res://common_assets/Login/loginBG.png" type="Texture" id=4]
[ext_resource path="res://common_assets/Login/coollogo_com-5541784.png" type="Texture" id=5]
[ext_resource path="res://common_assets/Login/loginbutton.tres" type="StyleBox" id=6]
[ext_resource path="res://common_assets/Fonts/loginbutton.tres" type="DynamicFont" id=7]

[node name="Login" type="Node2D"]
scale = Vector2( 0.799486, 0.800051 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 730.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_bottom = 1.0
margin_right = 1291.82
margin_bottom = 734.069
rect_scale = Vector2( 1, 0.981433 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 443.0
margin_top = 253.0
margin_right = 847.0
margin_bottom = 481.0

[node name="idpw" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_right = 200.0
margin_bottom = 228.0

[node name="ID" type="Label" parent="CenterContainer/HBoxContainer/idpw"]
margin_right = 200.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "ID:"
align = 1
valign = 1

[node name="Password" type="Label" parent="CenterContainer/HBoxContainer/idpw"]
margin_top = 84.0
margin_right = 200.0
margin_bottom = 164.0
rect_min_size = Vector2( 200, 80 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Password:"
align = 1
valign = 1

[node name="idpwdetails" type="VBoxContainer" parent="CenterContainer/HBoxContainer"]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 228.0

[node name="inputid" type="LineEdit" parent="CenterContainer/HBoxContainer/idpwdetails"]
margin_right = 200.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
max_length = 20

[node name="inputpw" type="LineEdit" parent="CenterContainer/HBoxContainer/idpwdetails"]
margin_top = 84.0
margin_right = 200.0
margin_bottom = 164.0
rect_min_size = Vector2( 200, 80 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
max_length = 20
secret = true

[node name="Login" type="Button" parent="CenterContainer/HBoxContainer/idpwdetails"]
margin_top = 168.0
margin_right = 200.0
margin_bottom = 228.0
rect_min_size = Vector2( 200, 60 )
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "Login"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Signup" type="Button" parent="."]
margin_left = 35.4432
margin_top = 643.815
margin_right = 185.443
margin_bottom = 703.815
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 6 )
custom_styles/disabled = ExtResource( 6 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
text = "Signup"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoginFail" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
dialog_text = "Invalid Username or Password!"

[node name="Title" type="CenterContainer" parent="."]
margin_right = 1279.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Title"]
margin_left = 370.0
margin_right = 908.0
margin_bottom = 133.0
texture = ExtResource( 5 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
[connection signal="text_changed" from="CenterContainer/HBoxContainer/idpwdetails/inputid" to="." method="_on_inputid_text_changed"]
[connection signal="text_changed" from="CenterContainer/HBoxContainer/idpwdetails/inputpw" to="." method="_on_inputpw_text_changed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/idpwdetails/Login" to="." method="_on_Login_pressed"]
[connection signal="pressed" from="Signup" to="." method="_on_Signup_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
